--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,8 +51,8 @@
     </div>
   </section>
 
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script> -->
-  <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
+  <script src="https://cdn.socket.io/socket.io-3.0.3.min.js"></script>
+  <!-- <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script> -->
   <script src="index.js"></script>
 </body>
 </html>
